--- a/extraconfig/all_nodes/mac_hostname.j2.yaml
+++ b/extraconfig/all_nodes/mac_hostname.j2.yaml
@@ -9,15 +9,7 @@ description: >
 # out-of-tree templates they may require additional parameters if the
 # in-tree templates add a new role.
 parameters:
-  controller_servers:
-    type: json
-  compute_servers:
-    type: json
-  blockstorage_servers:
-    type: json
-  objectstorage_servers:
-    type: json
-  cephstorage_servers:
+  servers:
     type: json
 # Note extra parameters can be defined, then passed data via the
 # environment parameter_defaults, without modifying the parent template
@@ -37,47 +29,17 @@ resources:
   # FIXME(shardy): Long term it'd be better if Heat SoftwareDeployments accepted
   # list instead of a map, then we could join the lists of servers into one
   # deployment instead of requiring one deployment per-role.
-  CollectMacDeploymentsController:
+{% for role in roles %}
+  CollectMacDeployments{{role.name}}:
     type: OS::Heat::SoftwareDeployments
     properties:
       name: CollectMacDeploymentsController
-      servers:  {get_param: controller_servers}
+      servers:  {get_param: servers, {{role.name}}}
       config: {get_resource: CollectMacConfig}
       actions: ['CREATE'] # Only do this on CREATE
+{% endfor %}
 
-  CollectMacDeploymentsCompute:
-    type: OS::Heat::SoftwareDeployments
-    properties:
-      name: CollectMacDeploymentsCompute
-      servers:  {get_param: compute_servers}
-      config: {get_resource: CollectMacConfig}
-      actions: ['CREATE'] # Only do this on CREATE
-
-  CollectMacDeploymentsBlockStorage:
-    type: OS::Heat::SoftwareDeployments
-    properties:
-      name: CollectMacDeploymentsBlockStorage
-      servers:  {get_param: blockstorage_servers}
-      config: {get_resource: CollectMacConfig}
-      actions: ['CREATE'] # Only do this on CREATE
-
-  CollectMacDeploymentsObjectStorage:
-    type: OS::Heat::SoftwareDeployments
-    properties:
-      name: CollectMacDeploymentsObjectStorage
-      servers:  {get_param: objectstorage_servers}
-      config: {get_resource: CollectMacConfig}
-      actions: ['CREATE'] # Only do this on CREATE
-
-  CollectMacDeploymentsCephStorage:
-    type: OS::Heat::SoftwareDeployments
-    properties:
-      name: CollectMacDeploymentsCephStorage
-      servers:  {get_param: cephstorage_servers}
-      config: {get_resource: CollectMacConfig}
-      actions: ['CREATE'] # Only do this on CREATE
-
-  # Now we distribute all-the-macs to all nodes
+  # Now we distribute all-the-macs to all Controller nodes
   DistributeMacConfig:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -101,7 +63,7 @@ resources:
     type: OS::Heat::SoftwareDeployments
     properties:
       name: DistributeMacDeploymentsController
-      servers:  {get_param: controller_servers}
+      servers:  {get_param: servers, Controller}
       config: {get_resource: DistributeMacConfig}
       input_values:
         # FIXME(shardy): It'd be more convenient if we could join these
