--- a/extraconfig/all_nodes/random_string.j2.yaml
+++ b/extraconfig/all_nodes/random_string.j2.yaml
@@ -10,15 +10,7 @@ description: >
 # out-of-tree templates they may require additional parameters if the
 # in-tree templates add a new role.
 parameters:
-  controller_servers:
-    type: json
-  compute_servers:
-    type: json
-  blockstorage_servers:
-    type: json
-  objectstorage_servers:
-    type: json
-  cephstorage_servers:
+  servers:
     type: json
 # Note extra parameters can be defined, then passed data via the
 # environment parameter_defaults, without modifying the parent template
@@ -42,7 +34,7 @@ resources:
     type: OS::Heat::SoftwareDeployments
     properties:
       name: RandomDeploymentsController
-      servers:  {get_param: controller_servers}
+      servers:  {get_param: servers, Controller}
       config: {get_resource: RandomConfig}
       actions: ['CREATE'] # Only do this on CREATE
       input_values:
@@ -52,7 +44,7 @@ resources:
     type: OS::Heat::SoftwareDeployments
     properties:
       name: RandomDeploymentsCompute
-      servers:  {get_param: compute_servers}
+      servers:  {get_param: servers, Compute}
       config: {get_resource: RandomConfig}
       actions: ['CREATE'] # Only do this on CREATE
       input_values:
