Generate VIP info for ctlplane VIP, not management
The management network does not have a VIP, so it's been wrong to
generate a cloud name and hieradata for this. Instead, the network
that actually needs a name and a hosts entry is the ctlplane network,
which actually has a VIP and there are services that use it.

bp tls-via-certmonger

Closes-Bug: #1621742
Change-Id: I163b2c7b5684da6dc290636f54eefe3f2b0c3e3f

--- a/puppet/services/vip-hosts.yaml
+++ b/puppet/services/vip-hosts.yaml
@@ -47,10 +47,10 @@ outputs:
             ip: "%{hiera('storage_mgmt_virtual_ip')}"
             ensure: present
             comment: FQDN of the storage mgmt VIP
-          management:
-            name: "%{hiera('cloud_name_management')}"
+          ctlplane:
+            name: "%{hiera('cloud_name_ctlplane')}"
             ip: "%{hiera('controller_virtual_ip')}"
             ensure: present
-            comment: FQDN of the management VIP
+            comment: FQDN of the ctlplane VIP
       step_config: |
         include ::tripleo::vip_hosts
