--- a/puppet/services/neutron-base.yaml
+++ b/puppet/services/neutron-base.yaml
@@ -50,13 +50,16 @@ parameters:
         to false may result in configuration remnants after updates/upgrades.
   NeutronGlobalPhysnetMtu:
     type: number
-    default: 1500
+    default: 1496
     description: |
         MTU of the underlying physical network. Neutron uses this value to
         calculate MTU for all virtual network components. For flat and VLAN
         networks, neutron uses this value without modification. For overlay
         networks such as VXLAN, neutron automatically subtracts the overlay
-        protocol overhead from this value.
+        protocol overhead from this value. The default value of 1496 is
+        currently in effect to compensate for some additional overhead when
+        deploying with some network configurations (e.g. network isolation over
+        single network interfaces)
   ServiceNetMap:
     default: {}
     description: Mapping of service_name -> network name. Typically set
