--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -62,6 +62,9 @@ parameters:
   CertmongerCA:
     type: string
     default: 'IPA'
+  EnableInternalTLS:
+    type: boolean
+    default: false
 
 resources:
 
@@ -218,6 +221,7 @@ resources:
                     cloud_name_ctlplane: {get_param: cloud_name_ctlplane}
                     # TLS parameters
                     certmonger_ca: {get_param: CertmongerCA}
+                    enable_internal_tls: {get_param: EnableInternalTLS}
 
 outputs:
   config_id:
