Add explicit entry for ctlplane IP in /etc/hosts
There was currently no way of getting it and we can't asure that the
primary IP will use it. So it's explicitly needed there.

Change-Id: Idb3ca22ac136691b0bff6f94524d133a4fa10617

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -323,6 +323,7 @@ outputs:
           STORAGE_MGMTIP STORAGE_MGMTHOST.DOMAIN STORAGE_MGMTHOST
           TENANTIP TENANTHOST.DOMAIN TENANTHOST
           MANAGEMENTIP MANAGEMENTHOST.DOMAIN MANAGEMENTHOST
+          CTLPLANEIP CTLPLANEHOST.DOMAIN CTLPLANEHOST
         params:
           PRIMARYIP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, CephStorageHostnameResolveNetwork]}]}
           DOMAIN: {get_param: CloudDomain}
@@ -363,6 +364,12 @@ outputs:
             - '.'
             - - {get_attr: [CephStorage, name]}
               - management
+          CTLPLANEIP: {get_attr: [CephStorage, networks, ctlplane, 0]}
+          CTLPLANEHOST:
+            list_join:
+            - '.'
+            - - {get_attr: [CephStorage, name]}
+              - ctlplane
   nova_server_resource:
     description: Heat resource handle for the ceph storage server
     value:
