Set client protocol for glance registry client
To communicate to glance registry, glance API has several parameters
that it uses to form the URI. Right now we are defaulting to http,
when we enable TLS everywhere, this will break. So setting the value
from the endpoint map should fix it.

Closes-Bug: #1623477
Change-Id: Id86787cbaa6f87fdcf9c26111c228fd59fbba012

--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -101,6 +101,7 @@ outputs:
             template: "'REGISTRY_HOST'"
             params:
               REGISTRY_HOST: {get_param: [EndpointMap, GlanceRegistryInternal, host]}
+        glance::api::registry_client_protocol: {get_param: [EndpointMap, GlanceRegistryInternal, protocol] }
         glance::api::authtoken::password: {get_param: GlancePassword}
         glance::api::enable_proxy_headers_parsing: true
         glance::api::debug: {get_param: Debug}
