Fix use of batch_create in CephMon major upgrade template
The batch_create and rolling_update keys were incorrectly defined
as properties of the resource instead of update policies.

Change-Id: I19261adc78e4cdc3616f16221e85490a6b48d47b
Closes-Bug: 1623506

--- a/extraconfig/tasks/major_upgrade_pacemaker.yaml
+++ b/extraconfig/tasks/major_upgrade_pacemaker.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2014-10-16
+heat_template_version: 2016-10-14
 description: 'Upgrade for Pacemaker deployments'
 
 parameters:
@@ -57,6 +57,7 @@ resources:
       servers: {get_param: controller_servers}
       config: {get_resource: CephMonUpgradeConfig}
       input_values: {get_param: input_values}
+    update_policy:
       batch_create:
         max_batch_size: 1
       rolling_update:
