--- a/puppet/services/services.yaml
+++ b/puppet/services/services.yaml
@@ -102,4 +102,8 @@ outputs:
           yaql:
             expression: list($.data.where($ != null).select($.get('global_config_settings')).where($ != null))
             data: {get_attr: [ServiceChain, role_data]}
+      service_config_settings:
+        yaql:
+          expression: $.data.where($ != null).select($.get('service_config_settings')).where($ != null).reduce($1.mergeWith($2), {})
+          data: {get_attr: [ServiceChain, role_data]}
       step_config: {list_join: ["\n", {get_attr: [ServiceChain, role_data, step_config]}]}
