Add CephRgw to roles_data.yaml
CephRgw defaults to None in the registry, seems like we missed it
in roles_data after a rebase.

Change-Id: I4ce8b160edfb193f5f6226f8295861e6625ef37b

--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -5,6 +5,7 @@
     - OS::TripleO::Services::CACerts
     - OS::TripleO::Services::CephMon
     - OS::TripleO::Services::CephExternal
+    - OS::TripleO::Services::CephRgw
     - OS::TripleO::Services::CinderApi
     - OS::TripleO::Services::CinderBackup
     - OS::TripleO::Services::CinderScheduler
